--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Account | <%= process.env.SITE_NAME %></title>
     <meta charset="utf-8" />
+    <title>Account | <%= process.env.SITE_NAME %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link rel="shortcut icon" href="<%= process.env.FAVICON_URL %>" type="image/x-icon" />
+
+    <link rel="dns-prefetch" href="<%= process.env.MARKETING_SITE_BASE_URL %>" />
+    <link rel="preload" fetchpriority="high" href="<%= process.env.MARKETING_SITE_BASE_URL %>/css/mfe-account.css" as="style" />
     <link rel="stylesheet" href="<%= process.env.MARKETING_SITE_BASE_URL %>/css/mfe-account.css" />
-    <% if (process.env.OPTIMIZELY_PROJECT_ID) { %>
-    <script src="<%= process.env.MARKETING_SITE_BASE_URL %>/optimizelyjs/<%= process.env.OPTIMIZELY_PROJECT_ID %>.js"></script>
-    <% } %>
   </head>
   <body>
     <!-- begin usabilla live embed code -->
