--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Account | <%= process.env.SITE_NAME %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noai, noimageai">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noai, noimageai" />
+    <meta name="robots" content="noindex, nofollow" />
     
     <link rel="shortcut icon" href="<%= process.env.FAVICON_URL %>" type="image/x-icon" />
 
